# geoserver-ows-importer

./: .gitignore
geoserver/: README.md  setup.py
geoserver/docs/: AttributeTypeInfo.md  AttributionInfo.md  AuthorityURLInfo.md  CRSResponse.md  ComponentVersion.md  ConnectionParameterEntry.md  ConnectionParameters.md  ContactInfo.md  ContactInfoWrapper.md  CoverageDimensionInfo.md  CoverageDimensionResponse.md  CoverageInfo.md  CoverageInfoWrapper.md  CoverageListWrapper.md  CoverageResponse.md  CoverageResponseWrapper.md  CoverageStoreInfo.md  CoverageStoreInfoWrapper.md  CoverageStoreList.md  CoverageStoreListItem.md  CoverageStoreListWrapper.md  CoverageStoreResponse.md  CoverageStoreResponseWrapper.md  CoveragesApi.md  CoveragestoresApi.md  DataLinkInfo.md  DataStoreInfo.md  DataStoreInfoWrapper.md  DataStoreListWrapper.md  DataStoreResponse.md  DataStoreWrapper.md  DataStoresListResponse.md  DatastoresApi.md  DefaultApi.md  DoubleArrayResponse.md  EnvelopeInfo.md  EnvelopeResponse.md  FeatureTypeInfo.md  (+72 more)
tools/: Main.py  README.md  config.ini  pyproject.toml
tools/tools/: Config.py  Main.py  PGMetadata.py  WFSLayerImporter.py  WMSLayerImporter.py  defaults.ini
tools/tools/api/: GeoserverApi.py  GeoserverBoostrap.py  __init__.py
tools/tools/api/models/: Common.py  DataStore.py  DataStores.py  FeatureType.py  FeatureTypes.py  Layer.py  LayerGroup.py  LayerGroups.py  Layers.py  Namespace.py  SettingsWFS.py  SettingsWMS.py  Style.py  Styles.py  Workspace.py  Workspaces.py  Worskpaces.py  __init__py
tools/tools/domain/: GdiDeServiceWFS.py  GdiDeServiceWMS.py
(+228 files in other folders)
