[tool.poetry]
name = "tools"
version = "0.1.0"
description = ""
authors = ["Andrea Borghi <andrea.borghi@camptocamp.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
owslib = "^0.29.2"
xmltodict = "^0.13.0"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
